# tagger

./: .gitignore  CHANGE_GPU.md  CLAUDE.md  INSTALL_NEW_SYSTEM.md  README.md  README_STREAMLIT_GUI.md  caption_noun_candidates.py  demo_comparison.py  generate_taxonomy.py  health_snapshot.py  immich_api.py  immich_caption_and_tag.py  immich_caption_and_tag.py.before_blip_fix  immich_caption_and_tag.py.before_caption_cleanup  immich_caption_and_tag_v2.py  immich_tagger_streamlit_app.py  labels_curated_hierarchical.txt  labels_taxonomy_map.csv  mirror_dc_subject_to_immich_xmp_tags.py  noun_candidates.csv  noun_candidates_full.csv  pyproject.toml  random_caption_pdf.py  remove_sidecar_tags.py  remove_sidecar_tags_v2.py  repair_caption_tags.py  repair_caption_tags_v2.py  repair_caption_tags_v3.py  repair_caption_tags_v4_blip_large.py  repair_caption_tags_v4_florence.py  results.txt  run_daily_new_images.sh  run_reprocess_all.sh  tag_stats.py  taxonomy_manager.py  timing_test.py  vlm_backend.py
.claude/: settings.json
logs/: .gitignore
test/: 6c2f4198-3577-4dec-83d9-82f776f376ef.jpg.xmp  9767658a-afa8-4bf1-ab12-0ce2bde46070.jpg.xmp  IMG-20211224-WA0007.jpg.xmp  IMG-20260403-WA0000.jpg.xmp  IMG-20260404-WA0000.jpg.xmp  PXL_20260116_160845150.jpg.xmp  UNADJUSTEDNONRAW_mini_282(1)(1).jpg.xmp  a166f744-1e87-4006-bee6-0b12ffbd5cbe.jpg.xmp  e856e0f9-f771-4f61-950a-88f7b55217a0.jpg.xmp
test_images/: 0d05c981-2a31-4491-a0f7-5330be6f9ca1.jpg.xmp  0d093ace-b6f4-4535-be06-bad8b5c62aa0.JPG.xmp  0d09e06c-5b64-4f44-bc3b-4cbc08b3f1c5.jpg.xmp  0d11fa3e-7e38-449f-a695-20ce71de0f0a.jpg.xmp  (+196 more)
