[project]
name = "immich-tagger"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "einops>=0.8.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "protobuf>=7.34.1",
    "reportlab>=5.0.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.13",
    "streamlit>=1.57.0",
    "timm>=1.0.27",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
]
